fixed home page button spacing

--- a/client/src/output.css
+++ b/client/src/output.css
@@ -645,6 +645,10 @@ video {
   margin-top: 2rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .inline-block {
   display: inline-block;
 }
